[gd_scene load_steps=3 format=3 uid="uid://b8k4m7rav3n2x"]

[ext_resource type="Script" path="res://scripts/systems/tilemap_manager.gd" id="1_tilemap_manager"]
[ext_resource type="TileSet" path="res://resources/game_tileset.tres" id="2_game_tileset"]

[node name="TileMapSceneTemplate" type="Node2D"]

[node name="TileMapManager" type="Node2D" parent="."]
script = ExtResource("1_tilemap_manager")
game_tileset = ExtResource("2_game_tileset")

[node name="FloorLayer" type="TileMap" parent="TileMapManager"]
z_index = 0
tile_set = ExtResource("2_game_tileset")

[node name="WallLayer" type="TileMap" parent="TileMapManager"]
z_index = 1
tile_set = ExtResource("2_game_tileset")

[node name="InteractiveLayer" type="TileMap" parent="TileMapManager"]
z_index = 2
tile_set = ExtResource("2_game_tileset")

[node name="DamageLayer" type="TileMap" parent="TileMapManager"]
z_index = 3
tile_set = ExtResource("2_game_tileset")

[node name="TriggerLayer" type="TileMap" parent="TileMapManager"]
z_index = 4
tile_set = ExtResource("2_game_tileset")

[node name="GameObjects" type="Node2D" parent="."]

[node name="UILayer" type="CanvasLayer" parent="."]